# ycomb-scrape

./: .gitignore  LICENSE  README.md  ycomb-scrape.cabal
src/: Main.hs  ProcessNewsYC.hs  ScrapeNewsYC.hs  Tests.hs
