name:                ycomb-scrape
version:             0.1.0.0
synopsis:	     Completion of a Haskell coding challenge
description:	     Scrape and filter summary info from news.ycombinator.com
homepage:            https://github.com/betchart/ycomb-scrape#readme
license:             BSD3
license-file:        LICENSE
author:              Burton Betchart
maintainer:          betchart@gmail.com
copyright:           Burton Betchart
category:            code-challenge
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ycomb-scrape
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, scalpel == 0.5.1
  other-modules:       ScrapeNewsYC
